board라우터1차정리

--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "nunjucks": "^3.2.3"
-  }
+  },
+  "name": "teampj",
+  "description": "## user - userId - userPw - userName - nickname - birth - gender - number - phoneNumber - level: 1,2,3으로 나눠짐 - active: 1(활동상태), 0(활동정지)",
+  "version": "1.0.0",
+  "main": "test.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hb707/teamPJ.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hb707/teamPJ/issues"
+  },
+  "homepage": "https://github.com/hb707/teamPJ#readme"
 }
