--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "memorystore": "^1.6.7",
+    "mysql": "^2.18.1",
     "nunjucks": "^3.2.3"
   },
   "name": "teampj",
@@ -11,7 +12,8 @@
   "version": "1.0.0",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
