페이징작업 마무리,idx값 삭제시 자동으로 아랫숫자로 정렬

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-session": "^1.17.2",
     "memorystore": "^1.6.7",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nunjucks": "^3.2.3"
   },
   "name": "teampj",
